k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: demo

  template:
    metadata:
      labels:
        app: demo

    spec:
      containers:
        - name: demo
          image: traefik/whoami
          ports:
            - containerPort: 80
