k8s/app-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: app-service

spec:
  selector:
    app: demo

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
