k8s/devops-demo-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-demo-service

spec:
  selector:
    app: devops-demo

  ports:
    - protocol: TCP
      port: 80  #service port
      targetPort: 5000 #pod port
#"Expose the application through the Service on port 80, 
#then forward traffic to port 5000 on the Pods."
  type: ClusterIP
